--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.theapache64.rebuggerplugin
-pluginName = rebugger-plugin
+pluginName = Rebugger Plugin
 pluginRepositoryUrl = https://github.com/theapache64/rebugger-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
