--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.theapache64.rebuggerplugin</id>
-    <name>rebugger-plugin Template</name>
+    <name>Rebugger</name>
     <vendor>theapache64</vendor>
 
     <depends>com.intellij.modules.platform</depends>
@@ -9,10 +9,22 @@
     <resource-bundle>messages.MyBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.theapache64.rebuggerplugin.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <toolWindow factoryClass="com.github.theapache64.rebuggerplugin.toolWindow.MyToolWindowFactory"
+                    id="MyToolWindow"/>
     </extensions>
 
+    <actions>
+        <action
+            id="Rebugger.AddRebuggerHereAction"
+            class="com.github.theapache64.rebuggerplugin.AddRebuggerHereAction"
+            text="Add Rebugger Here"
+            description="Add Rebugger call here">
+            <add-to-group group-id="EditorPopupMenu" anchor="first"/>
+        </action>
+    </actions>
+
     <applicationListeners>
-        <listener class="com.github.theapache64.rebuggerplugin.listeners.MyFrameStateListener" topic="com.intellij.ide.FrameStateListener"/>
+        <listener class="com.github.theapache64.rebuggerplugin.listeners.MyFrameStateListener"
+                  topic="com.intellij.ide.FrameStateListener"/>
     </applicationListeners>
 </idea-plugin>
