✨ start next development version (0.0.2)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.theapache64.rebuggerplugin
-pluginName = Rebugger Plugin
+pluginName = Rebugger
 pluginRepositoryUrl = https://github.com/theapache64/rebugger-plugin
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 0.0.2
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 221
