--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,8 +113,9 @@ jobs:
           path: ${{ github.workspace }}/build/reports/pluginVerifier
 
       # Run Qodana inspections
-      - name: Qodana - Code Inspection
-        uses: JetBrains/qodana-action@v2023.1.0
+      # Disabled due to https://github.com/JetBrains/intellij-platform-plugin-template/issues/209
+#      - name: Qodana - Code Inspection
+#        uses: JetBrains/qodana-action@v2023.1.0
 
       # Prepare plugin archive content for creating artifact
       - name: Prepare Plugin Artifact
